--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install npm dependencies
       run: npm install --force
 
-    - name: Clear cache
-      run: npm cache clean
+    # - name: Clear cache
+    #   run: npm cache clean
 
     - name: Generate build
       run: CI=false npm run build --no-lint
